--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Telemetry Pit App</title>
+    <link rel="icon" type="image/x-icon" href="images/Array Flag.png">
     <link rel="stylesheet" href="styles.css" />
+    <script src="script.js"></script>
+
   </head>
   <body onload="updateTime()">
     <div class="container;">
@@ -149,6 +152,5 @@
         </div>
       </footer>
     </div>
-    <script src="script.js"></script>
   </body>
 </html>
