--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>S.T.A.R</title>
+    <title>S.T.A.R.S.</title>
     <link rel="icon" type="image/x-icon" href="images/Array Flag.png">
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
