updated clock to just hours and minutes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Batt Temp = 0 F</p>
       </div>
       <div class="clock">
-        <span id="hours"></span><span>:</span><span id="minutes"></span><span>:</span><span id="seconds"></span>
+        <span id="hours"></span><span>:</span><span id="minutes"></span>
       </div>
       <div class="mppt">
         <div class="mppt-section">
