--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
     <a href="/index.html">
       <div class="team-logo">TEAM <span class="sunergy">SUNERGY</span></div>
     </a>
-    <div class="weather">
-      Weather: (Temp)/(Wind Speed)/(Wind Direction)/(Condition)
-    </div>
     <div class="clock">
       <span id="hours"></span><span>:</span><span id="minutes"></span></span><span id="ampm"></span>
     </div>
@@ -67,6 +64,13 @@
         <p>Difference = 0%</p>
         <p>Batt Temp = 0 F</p>
       </div>
+
+      <div class="weather">
+        <input type="text" id="cityInput" placeholder="Enter city name">
+        <button onclick="searchWeather()">Search</button>
+        <div id="weatherInfo"></div>
+      </div>
+      
       <div class="mppt">
         <div class="mppt-section">
           <h4>MPPT 1</h4>
