commit for checkout purpose

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 
       <div class="weather-widget">
         <div class="weather-input">
-          <input type="text" id="cityInput" placeholder="Enter city name">
+          <input type="text" id="cityInput" placeholder="Enter city">
           <button onclick="searchWeather()">Search</button>
         </div>
         <div class="weather-info" id="weatherInfo"></div>
       </div>       
-      
+
     </section>
   </main>
 
